--- a/src/main.css
+++ b/src/main.css
@@ -78,3 +78,15 @@ button:focus {
   border: none;
   transform: translateY(65%);
 }
+
+.social i {
+  color: var(--primary-color);
+  font-size: xx-large;
+  margin: 0 10px;
+}
+
+.social {
+  position: fixed;
+  top: 50px;
+  right: 40px;
+}
