--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,13 +6,13 @@
     <title>VIN Chsk</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="public/css/main.css">
     <script src="https://kit.fontawesome.com/e0f8847c22.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="content app-text">
     <div class="logo">
-        <img src="img/logo.png" />
+        <img src="public/img/logo.png" />
     </div>
     <div class="wrapper">
         <div>
