Login, logout, registration flow. Persisting session in db.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,3 +70,17 @@ button:focus {
 a > * {
   cursor: pointer;
 }
+
+form {
+  color: black;
+}
+
+.error {
+    color: red;
+    font-size: small;
+}
+
+.message {
+    color: green;
+    font-size: small;
+}
